
=head1 RELEASES

=cut

TODO:
Measure overhead and subtract where appropriate, as far as possible, including from other.
Flush at rollover (new profile node created - may not be reliable/safe)?
Option to Flush (_if_due) only at period end
Move DashProfiler::Dump* packages out to modules DashProfiler::DumpTo::*
Extend DashProfiler::Apache to do handler plumbing for periods?

=head2 DashProfiler 1.08 - r36 - Sept 11 2007

  Fixed fatal error in visit_profile_nodes() for DBI profiles with no Data.

  Changed propagate_period_count() to not reset period_count.
  Changed to increment period_count in end_sample_period() not start_sample_period().
  Changed start_sample_period() to not call end_sample_period() automatically.
    So now multiple start_sample_period() calls without end_sample_period() calls
    are harmless - the period runs from the most recent start_sample_period() call.

  Added period_strict_start and period_strict_end attributes to control how
    missing/multiple start_sample_period() & end_sample_period calls are handled.
    The attributes can be code refs which are called when needed.
  Added extra_info attribute for use by scripts to carry any extra information.

=head2 DashProfiler 1.07 - r32 - Aug 16 2007

  Added DashProfiler::Apache
  Added -optional syntax to DashProfiler::Import

=head2 DashProfiler 1.06 - r29 - Aug 14 2007

  Fixed DashProfiler::Import :optionally to still export stubs
  Changed DashProfiler reset_all_profiles() to not call start_sample_period_all_profiles().
  Changed DashProfiler::Auto to use file name not full path.
  Changed DashProfiler::Core end_sample_period() to do nothing if no period is active.
  Added more docs, especially to UserGuide and Auto.

=head2 DashProfiler 1.05 - r25 - Aug 10 2007

  Added :optional to DashProfiler::Import
  Added dbi_profile_args to pass extra args to dbi_profile_class->new().
  Added DashProfiler::Auto for simple uses, including one-liners
  Added lots of documentation.
