@@ -1,6 +1,5 @@
 Changes
 MANIFEST
-META.yml			# Will be created by "make dist"
 Makefile.PL
 README
 lib/DashProfiler.pm
